hphp/hack/test/typecheck/expression_trees/consecutive_splicing.php.like_types.exp
File "consecutive_splicing.php", line 6, characters 13-13:
Typing error (Typing[4110])
  File "consecutive_splicing.php", line 6, characters 13-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "consecutive_splicing.php", line 7, characters 13-13:
Typing error (Typing[4110])
  File "consecutive_splicing.php", line 7, characters 13-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "consecutive_splicing.php", line 8, characters 8-12:
Was expecting an object but type is unknown (Typing[4297])
  File "consecutive_splicing.php", line 6, characters 13-13:
  It is unknown because type parameter `TInfer` of `makeTree` could not be determined. Please add explicit type parameters to the invocation of `makeTree`
  File "expr_tree.hhi", line 13, characters 37-42:
    via this generic `TInfer`
  File "expr_tree.hhi", line 153, characters 44-49:
    via this generic `TInfer`
